# cpp_vscode_settings

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
.github/workflows/: checkout.yml
lib/: main.cpp
lib/src/: add.cpp  add.hpp
src/: my_class.cpp
test/: unit_test.cpp
test/unit/: add_test.cpp
tool/makefile/: build.mk  clean.mk  environment.mk
tool/makefile/platform/: nix.mk  win.mk
